# xdgkit

./: .gitignore  Cargo.toml
src/: desktop_entry.rs  desktop_menu.rs  icon_finder.rs  user_dirs.rs
