# package info
[package]
name = "xdgkit2"
version = "3.2.4"
authors = ["Israel Dahl <israeldahl@protonmail.com>"]
edition = "2018"
description = "A command line kit for XDG specs.  As well as a Rust library"
keywords = ["xdg","menu","icons","desktop","linux"]
categories = ["command-line-utilities","os::linux-apis","os"]
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/loyalpartner/xdgkit"
homepage = "https://freedesktop.org"
documentation = "https://docs.rs/xdgkit2/"

# library files
[lib]
name = "xdgkit"
path = "src/lib.rs" 

# dependencies
[dependencies]
# ini file reader
tini = { git = "https://github.com/1sra3l/tini.git", version = "1.3"}
# command line parser
clap = {version = "3.0.0-beta.2", features = ["yaml"]}
# xml
quick-xml = { version = "0.31", features = [ "serialize" ] }# git = ""
# serde
serde = {version = "1.0", features = ["derive"]}
